Change overflow, seems to fix scroll prboelm

--- a/main.css
+++ b/main.css
@@ -116,5 +116,5 @@ body {
 
 html, body {
     max-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
